# AYED2025-2

./: .gitignore  CMakeLists.txt
00_pointers/: CMakeLists.txt  funciones.cpp  funciones.hpp  main.cpp
00_pointers/tests/: CMakeLists.txt  main_test.cpp
01_struct/: CMakeLists.txt  main.cpp
02_clases/: CMakeLists.txt  main.cpp
03_herencia/: CMakeLists.txt  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  main.cpp
04_virtual/: CMakeLists.txt  Circulo.cpp  Circulo.h  Circulo.hpp  Forma.cpp  Forma.h  Forma.hpp  main.cpp
04_z_repaso_01/: CMakeLists.txt  main.cpp
04_z_repaso_02/: CMakeLists.txt  main.cpp
04_z_repaso_03/: CMakeLists.txt  main.cpp
04_z_repaso_04/: CMakeLists.txt  main.cpp
05_z_repaso_01/: CMakeLists.txt  diagramaclases.excalidraw  main.cpp
05_z_repaso_02/: CMakeLists.txt  main.cpp
05_z_repaso_03/: CMakeLists.txt  main.cpp
05_z_repaso_04/: CMakeLists.txt  main.cpp
06_recursion/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
07_listas/: CMakeLists.txt  lista.cpp  lista.hpp  main.cpp  nodo.cpp  nodo.hpp
08_generics/: CMakeLists.txt  lista.hpp  main.cpp  nodo.hpp
09_vector/: CMakeLists.txt  main.cpp
10_colas/: CMakeLists.txt  cola.hpp  main.cpp  nodo.hpp  pila.hpp
11_extensionlistas/: CMakeLists.txt  lista.hpp  listas_ext.excalidraw  main.cpp
12_posfijo/: CMakeLists.txt  main.cpp  pila.hpp
13_parentesis/: CMakeLists.txt  lista.hpp  main.cpp
14_colaspilas_array/: CMakeLists.txt  circular.excalidraw  cola.hpp  main.cpp
15_z_repaso_01/: CMakeLists.txt  cola.hpp  lista.hpp  main.cpp  pila.hpp
15_z_repaso_02/: CMakeLists.txt  carrito.hpp  main.cpp  producto.hpp
16_sorting/: CMakeLists.txt  main.cpp  sorting.hpp
17_extensionlistas_2/: CMakeLists.txt  lista.hpp  main.cpp
18_merge/: CMakeLists.txt  main.cpp  merge.excalidraw
19_quick/: CMakeLists.txt  Doxyfile  main.cpp  quick.excalidraw
20_arboles/: CMakeLists.txt  arbolbusqueda.excalidraw  main.cpp
20_heap/: main.cpp
21_arbol_extension/: CMakeLists.txt  bfs.excalidraw  main.cpp
21_arboles/: CMakeLists.txt  arbolbusqueda.excalidraw
22_AVL/: CMakeLists.txt  main.cpp
22_arbol_extension/: CMakeLists.txt  borrado.excalidraw
23_AVL/: CMakeLists.txt  avl.excalidraw
23_red_black/: CMakeLists.txt  main.cpp
24_red_black/: CMakeLists.txt  main.cpp
25_busquedas/: CMakeLists.txt  main.cpp  recap.excalidraw
25_heap_sort/: CMakeLists.txt  heap.excalidraw  main.cpp
26_busquedas/: CMakeLists.txt  main.cpp  perfomanceutils.hpp
27_bitsets/: main.cpp
27_busquedas/: CMakeLists.txt  hash.excalidraw  main.cpp  perfomanceutils.hpp
28_bitsets/: CMakeLists.txt  main.cpp
29_grafos_lista/: CMakeLists.txt  grafo.excalidraw  main.cpp
30_grafos_matriz/: CMakeLists.txt  (+2 more)
(+28 files in other folders)
